# whisp-cli-client

./: .gitignore  CMakeLists.txt  README.md
include/whisp-cli/: chat_log.h  client_window.h  config.h  logging.h  mainwindow.h  message.h
src/: CMakeLists.txt  chat_log.cc  client_window.cc  config.cc  encryption.cc  main.cc  mainwindow.cc  message.cc
